# tauri-plugin-macos-fps

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/fps-test/src/: index.html
examples/fps-test/src-tauri/: Cargo.toml  tauri.conf.json
examples/fps-test/src-tauri/capabilities/: default.json
examples/fps-test/src-tauri/src/: lib.rs  main.rs
src/: lib.rs  macos.rs
