[package]
name = "fps-test"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[dependencies]
tauri = { version = "2", features = ["wry"] }
tauri-plugin-macos-fps = { path = "../../.." }
serde_json = "1"
log = "0.4"
env_logger = "0.11"

[build-dependencies]
tauri-build = { version = "2", features = [] }
